edits margin for container to prevent overlap

--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@ body {
 
 .container {
     width: 100%;
-    margin: 0 auto;
+    margin-bottom: 5%;
 }
 
 img {
